--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -76,7 +76,7 @@
             {{ step.backButtonLabel }}
           </button>
         </div>-->
-        <div class="col-md-6" *ngIf="vieworedit === 'add' || vieworedit === 'update'">
+        <div class="col-md-6">
           <!--<button
             *ngIf="
               currentFlow === 'verified-registration' &&
