--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -233,7 +233,7 @@
                     *ngIf="vieworedit !== 'viewOnly'"
                     mat-icon-button
                     aria-label="Remove"
-                    (click)="deleteOtherContactRow(index)"
+                    (click)="confirmDeleteOtherContactRow(index)"
                   >
                     <img src="/assets/images/delete.svg" height="35" width="35" />
                     <img
