--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -526,7 +526,7 @@
                   <td *matCellDef="let element; let index = index" mat-cell>
                     <button
                       class="edit-image"
-                      *ngIf="vieworedit !== 'viewOnly'"
+                      *ngIf="vieworedit !== 'viewOnly' || contactonly === 'contactOnly'"
                       mat-icon-button
                       aria-label="Edit"
                       (click)="editOtherContactsRow(element, index)"
@@ -540,7 +540,7 @@
                     </button>&nbsp;
                     <button
                     class="delete-image"
-                    *ngIf="vieworedit !== 'viewOnly'"
+                    *ngIf="vieworedit !== 'viewOnly' || contactonly === 'contactOnly'"
                     mat-icon-button
                     aria-label="Remove"
                     (click)="confirmDeleteOtherContactRow(index)"
@@ -573,7 +573,8 @@
               </div>
 
               <button
-                *ngIf="!showOtherContactForm && vieworedit !== 'viewOnly' && !hideOtherContactButton"
+                *ngIf="!showOtherContactForm && vieworedit !== 'viewOnly' && !hideOtherContactButton
+                      || !showOtherContactForm && contactonly === 'contactOnly' && !hideOtherContactButton"
                 class="family-button"
                 mat-button
                 type="button"
