--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -65,7 +65,7 @@
                 Maximum length is 100 characters</mat-error
               >
             </mat-form-field>
-            <mat-error *ngIf="propertyDamageForm.hasError('noCauseOfDamage')">
+            <mat-error *ngIf="propertyDamageForm.hasError('noCauseOfDamage') && vieworedit !== 'viewOnly'">
               <br/>At least one cause of damage is required.
             </mat-error>
           </div>
