--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -111,8 +111,15 @@
               Submit
             </button>
           </div>
+          
         </div>
         <br/>
+        <div class="col-md-12" style="padding: 16px 16px 16px 28px;">
+          <p class="infoHeader">Information Viewable at Any Time by DFA Staff</p>
+          <p>
+            Information collected on this application form may be viewable by Disaster Financial Assistance Staff whether the application has been submitted or not.
+          </p>
+        </div>
         <!--<label>** You do not have to complete the entire application at once, you can udpate it from the dashboard as needed.  However, before you
         submit the final signed version, all fields marked with a <b><span style="color:red;">*</span></b> must be completed.</label>-->
       </div>
