--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.scss
@@ -4,6 +4,11 @@
     vertical-align: middle;
 }
 
+.infoHeader {
+    font-weight: bold;
+    font-size: 16px;
+}
+
 :host ::ng-deep .mat-horizontal-stepper-header-container {
   display: none;
 }
