--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.scss
@@ -9,9 +9,9 @@
     font-size: 16px;
 }
 
-:host ::ng-deep .mat-horizontal-stepper-header-container {
+/*:host ::ng-deep .mat-horizontal-stepper-header-container {
   display: none;
-}
+}*/
 
 @media screen and (max-width: 768px) {
     ::ng-deep .mat-step-label {
