--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -93,6 +93,13 @@
           >
             View Application
           </button>
+           <button
+             class="application-button"
+             type="button"
+             (click)="ViewProjects(applItem)"
+           >
+             View Projects
+           </button>
         </div>
       </div>
       <!--<div class="row" style="padding-top: 35px;">
