--- a/dfa-public/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa-public/src/UI/embc-dfa/src/styles/styles.scss
@@ -133,11 +133,11 @@ footer nav {
 }
 
 .container-frame {
-  padding-top: 60px;
+  padding-top: 30px;
 }
 
 .highlight-conflicts {
-  color: #234075;
+  color: #292929;
   font-weight: bold;
 }
 
@@ -160,11 +160,12 @@ footer nav {
 .heading-container {
   // padding-bottom: 25px;
   font-size: 50px;
-  color: #234075;
+  color: #292929;
 }
 
 .page-heading {
-  font-size: 45px;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .button-style {
