--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -569,7 +569,7 @@
             </span>
           </div>
         </div>
-        <div class="row info-detail" >
+        <!--<div class="row info-detail" >
           <div class="col-md-3">
             <span [ngClass]="{'missing-info': !(formCreationService.propertyDamageForm$ | async)?.value?.subtypeDFAComment || (formCreationService.propertyDamageForm$ | async)?.controls.subtypeDFAComment.invalid}">DFA comments:</span>
           </div>
@@ -582,7 +582,7 @@
               }}
             </span>
           </div>
-        </div>
+        </div>-->
         <div class="row info-detail" >
           <div class="col-md-3">
             <span [ngClass]="{'missing-info': !(formCreationService.propertyDamageForm$ | async)?.value?.guidanceSupport || (formCreationService.propertyDamageForm$ | async)?.controls.guidanceSupport.invalid}">Receive guidance and support:</span>
