--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -205,7 +205,7 @@
               <mat-select [disabled]="isReadOnly === true" formControlName="applicantSubSubtype" matInput placeholder="Please select the type of Other Local Government Body">
                 <div *ngFor="let option of ApplicantSubSubCategories | keyvalue: originalOrder">
                   <mat-option style="height: unset !important;"
-                    [value]="option.key">
+                    [value]="option.value">
                     {{ option.value }}
                   </mat-option>
                 </div>
@@ -239,7 +239,7 @@
           </div>
         </div><br/>
 
-        <div class="row">
+        <div class="row" *ngIf="vieworedit !== 'add'">
           <div class="col-md-8">
             <p class="sub-heading" style="font-size: 15px">
               DFA comments
