--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -89,17 +89,18 @@
           <button
             class="application-button"
             type="button"
+            (click)="ViewProjects(applItem)"
+          >
+            Submit Projects
+          </button>
+          <button
+            class="application-button"
+            type="button"
             (click)="ViewApplication(applItem)"
           >
             View Application
           </button>
-           <button
-             class="application-button"
-             type="button"
-             (click)="ViewProjects(applItem)"
-           >
-             View Projects
-           </button>
+           
         </div>
       </div>
       <!--<div class="row" style="padding-top: 35px;">
