--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -599,7 +599,7 @@
         </div>
         <br /><br />
         <div class="row justify-content-between">
-          <div class="col-md-6 card-heading">Occupants</div>
+          <div class="col-md-6 card-heading">Other Contacts</div>
           <div class="col-md-2" *ngIf="allowEdit">
             <button
               class="edit-image"
@@ -619,7 +619,7 @@
         <hr />
 
         <div class="row info-detail" *ngIf="(formCreationService.otherContactsForm$ | async)?.value?.otherContacts?.length > 0">
-          <b>Other Contacts</b>
+          <!--<b>Other Contacts</b>-->
           <table mat-table [dataSource]="otherContactsDataSource">
             <!-- Name Column -->
             <ng-container matColumnDef="name">
