--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
@@ -28,14 +28,20 @@
         <mat-option value="-1">
           All Projects
         </mat-option>
+        <mat-option value="10">
+          Last 10 days
+        </mat-option>
+        <mat-option value="15">
+          Last 15 days
+        </mat-option>
         <mat-option value="30">
           Last 30 days
         </mat-option>
-        <mat-option value="60">
-          Last 60 days
-        </mat-option>
         <mat-option value="90">
-          Last 90 days
+          Last Quarter
+        </mat-option>
+        <mat-option value="365">
+          Last Year
         </mat-option>
       </mat-select>
     </div>
