[EMCRI-217] Business BCeID Authentication - but no landing page yet

--- a/dfa-public/src/UI/embc-dfa/src/app/login-page/login-page.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/login-page/login-page.component.html
@@ -22,10 +22,10 @@
           <img
             src="/assets/images/services-card-icon.png"
             class="register-with-card-image"
-            alt="BC Services Card"
+            alt="Business BCeID"
           />
           <h2 class="register-with-card-title">
-            Register <strong class="--blue">with</strong> BC Services Card
+            Register <strong class="--blue">with</strong> Business BCeID
           </h2>
           <div class="register-with-card-list">
             <table>
@@ -72,16 +72,9 @@
         </div>
       </div>
       <div class="register-with-card-button-container">
-        <button mat-button class="button-p btn-width" (click)="verifyUser()">
-          Log in with BC Services Card
+        <button mat-button class="button-p btn-width" (click)="login()">
+          Log in with Business BCeID
         </button>
-      </div>
-      <div class="learn-more-container">
-        <a
-          class="link"
-          href="https://www2.gov.bc.ca/gov/content?id=B2B3A21E797A421A8FD39EEA86E245D6"
-          >Learn more about the BC Services Card app</a
-        >
       </div>
     </div>
   </div>
